[package]
name = "wordler"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
dashmap = "6.1.0"
fxhash = "0.2.1"
hashbrown = { version = "0.16.1", features = ["rayon"] }
rand = "0.9.2"
rayon = "1.11"
serial_test = "3.3.1"
tempfile = "3.24.0"
wincode = { version = "0.2.5", features = ["derive"] }
